--- a/packages/shared-ui/src/components/Shared/DataGrid/components/button/button.module.css
+++ b/packages/shared-ui/src/components/Shared/DataGrid/components/button/button.module.css
@@ -2,7 +2,7 @@
 .gridButton {
     opacity: 1;
     width: 10px ;
-    height: 30px;
+    height: 20px;
     object-fit: contain; 
     min-width: 0 !important; 
   }
